[project]
name = "datacamp-xp-farm"
version = "0.1.0"
description = ""
authors = [
    {name = "LaurenceOMFoisy",email = "mail@mfoisy.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "selenium (>=4.29.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
